--- a/modules/articles/client/views/admin/form-article.client.view.html
+++ b/modules/articles/client/views/admin/form-article.client.view.html
@@ -1,4 +1,4 @@
-<section>
+<section class="row">
   <div class="page-header">
     <h1>{{vm.article._id ? 'Edit Article' : 'New Article'}}</h1>
   </div>
