--- a/modules/articles/client/views/list-articles.client.view.html
+++ b/modules/articles/client/views/list-articles.client.view.html
@@ -1,6 +1,6 @@
-<section>
+<section class="row">
   <div class="page-header">
-    <h1>Articles</h1>
+    <h1>Stories</h1>
   </div>
   <div class="list-group">
     <a ng-repeat="article in vm.articles" ui-sref="articles.view({ articleId: article._id })" class="list-group-item">
