--- a/modules/chat/client/views/chat.client.view.html
+++ b/modules/chat/client/views/chat.client.view.html
@@ -1,5 +1,5 @@
 <!-- The chat view -->
-<section class="container">
+<section class="row">
   <div class="page-header">
     <h1>Chat Example</h1>
   </div>
