--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,50 +1,86 @@
-<div class="container" ng-controller="HeaderController as vm">
-  <div class="navbar-header">
-    <button class="navbar-toggle" type="button" ng-click="vm.isCollapsed = !vm.isCollapsed">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a ui-sref="home" class="navbar-brand">MEAN.JS</a>
+<div ng-controller="HeaderController as vm">
+  <div class="header-wrapper">
+    <div class="header shadow"></div>
+    <div class="header header-background home-page" style="background-image: url('{{vm.headerImageURL}}'); background-size: cover;"></div>
   </div>
-  <nav class="navbar-collapse" uib-collapse="!vm.isCollapsed" role="navigation">
-    <ul class="nav navbar-nav" ng-if="vm.menu.shouldRender(vm.authentication.user);">
-      <li ng-repeat="item in vm.menu.items | orderBy: 'position'" ng-if="item.shouldRender(vm.authentication.user);" ng-switch="item.type" ng-class="{ dropdown: item.type === 'dropdown' }" ui-sref-active="active" class="{{item.class}}" uib-dropdown="item.type === 'dropdown'">
-        <a ng-switch-when="dropdown" class="dropdown-toggle" uib-dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
-        <ul ng-switch-when="dropdown" class="dropdown-menu">
-          <li ng-repeat="subitem in item.items | orderBy: 'position'" ng-if="subitem.shouldRender(vm.authentication.user);">
-            <a ui-sref="{{subitem.state}}({{subitem.params}})" ng-bind="subitem.title"></a>
-          </li>
-        </ul>
-        <a ng-switch-default ui-sref="{{item.state}}" ng-bind="item.title"></a>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right" ng-hide="vm.authentication.user">
-      <li ui-sref-active="active">
-        <a ui-sref="authentication.signup">Sign Up</a>
-      </li>
-      <li class="divider-vertical"></li>
-      <li ui-sref-active="active">
-        <a ui-sref="authentication.signin">Sign In</a>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right" ng-show="vm.authentication.user">
-      <li class="dropdown" uib-dropdown>
-        <a class="dropdown-toggle user-header-dropdown-toggle" uib-dropdown-toggle role="button">
-          <img ng-src="{{vm.authentication.user.profileImageURL}}" alt="{{vm.authentication.user.displayName}}" class="header-profile-image" />
-          <span ng-bind="vm.authentication.user.displayName"></span> <b class="caret"></b>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-          <li ui-sref-active="active" ng-repeat="item in vm.accountMenu.items">
-            <a ui-sref="{{item.state}}" ng-bind="item.title"></a>
-          </li>
-          <li class="divider"></li>
-          <li>
-            <a href="/api/auth/signout" target="_self">Signout</a>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
+  <div class="header angled-header">
+    <div class="container">
+      <nav class="navbar navbar-default custom-navbar" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button class="navbar-toggle" type="button" ng-click="vm.isCollapsed = !vm.isCollapsed">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a ui-sref="home" class="logo">
+              <img src="/modules/core/client/img/brand/logo.png"></img>
+            </a>
+          </div>
+          <div class="navbar-collapse custom-navbar collapse" uib-collapse="!vm.isCollapsed">
+            <ul class="nav navbar-nav navbar-right" ng-if="vm.menu.shouldRender(vm.authentication.user);">
+              <li ng-hide="vm.authentication.user" ng-repeat="item in vm.menu.items | orderBy: 'position'" ng-switch="item.type" ng-if="item.shouldRender(vm.authentication.user);"
+                ui-sref-active="active" class="{{item.class}}">
+                <a ng-switch-when="dropdown" ui-sref="{{item.items[0].state}}({{item.items[0].params}})" ng-bind="item.title"></a>
+                <a ng-switch-default ui-sref="{{item.state}}" ng-bind="item.title"></a>
+              </li>
+              <li ng-show="vm.authentication.user" ng-repeat="item in vm.menu.items | orderBy: 'position'" ng-if="item.shouldRender(vm.authentication.user);"
+                ng-switch="item.type" ng-class="{ dropdown: item.type === 'dropdown' }" ui-sref-active="active" class="{{item.class}}"
+                uib-dropdown="item.type === 'dropdown'">
+                <a ng-switch-when="dropdown" class="dropdown-toggle" uib-dropdown-toggle role="button">{{::item.title}}&nbsp;<span class="caret"></span></a>
+                <ul ng-switch-when="dropdown" class="dropdown-menu">
+                  <li ng-repeat="subitem in item.items | orderBy: 'position'" ng-if="subitem.shouldRender(vm.authentication.user);">
+                    <a ui-sref="{{subitem.state}}({{subitem.params}})" ng-bind="subitem.title"></a>
+                  </li>
+                </ul>
+                <a ng-switch-default ui-sref="{{item.state}}" ng-bind="item.title"></a>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav" ng-hide="vm.authentication.user">
+              <li ui-sref-active="active">
+                <a ui-sref="authentication.signup">Sign Up</a>
+              </li>
+              <li class="divider-vertical"></li>
+              <li ui-sref-active="active">
+                <a ui-sref="authentication.signin">Sign In</a>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav" ng-show="vm.authentication.user">
+              <li class="dropdown" uib-dropdown>
+                <a class="dropdown-toggle user-header-dropdown-toggle" uib-dropdown-toggle role="button">
+                  <img ng-src="{{vm.authentication.user.profileImageURL}}" alt="{{vm.authentication.user.displayName}}" class="header-profile-image"
+                  />
+                  <span ng-bind="vm.authentication.user.displayName"></span> <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu" role="menu">
+                  <li ui-sref-active="active" ng-repeat="item in vm.accountMenu.items">
+                    <a ui-sref="{{item.state}}" ng-bind="item.title"></a>
+                  </li>
+                  <li class="divider"></li>
+                  <li>
+                    <a href="/api/auth/signout" target="_self">Signout</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div>
+        <p class="headline" ng-show="vm.isHomepage"> We help make <span class="extra-bold">technology</span><br/>work for <span class="extra-bold">everyone<span></p>
+        <div class="container search-header" ng-hide="vm.isHomepage">
+          <h2 ng-bind="vm.title"></h2>
+          <section  ng-include="'/modules/core/client/views/search-box.client.view.html'"></section>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container" id="backshape">
+    <div class="wrapper">
+    </div>
+  </div>
+  <div class="container" id="backshape" style="margin-top: -22px;">
+    <div class="wrapper"></div>
+  </div>
 </div>
