--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -31,3 +31,11 @@
 .social-button:hover {
   opacity: 0.65;
 }
+
+.header-profile-image {
+  border-radius: 100px;
+  float: right;
+  height: 50px;
+  margin-top: -18px;
+  margin-left: 10px;
+}
